# data-interview

./: Makefile  README.md  interviews.yaml  requirements-dev.txt
interview_tests/parse-e02-files/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
interview_tests/parse-e02-files/data/: e029924d.012924
interview_tests/parse-e02-files/data/schema/: AGR.csv  DD1.csv  ICD.csv  RES.csv
interview_tests/parse-e02-files/data/schemas/: ACN.csv  ACR.csv  ADR.csv  APT.csv  CAR.csv  CLM.csv  CST.csv  CTL.csv  DES.csv  IBC.csv  LD1.csv  LD2.csv  LD3.csv  LEG.csv  MCF.csv  NET.csv  NOT.csv  OFF.csv  PAY.csv  PDN.csv  PFL.csv  REC.csv  RED.csv  REI.csv  RST.csv  SPC.csv  SSN.csv  UAR.csv  WD1.csv  WD3.csv  WRK.csv
interview_tests/parse-e02-files/src/: __main__.py  parse_e02.py
interview_tests/parse-e02-files/tests/: test_data.py
