[tool.poetry]
name = "parse-e02-files"
version = "0.1.0"
description = ""
authors = ["Data Team <data@ledgebrook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
structlog = "^24.1.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
orjson = "^3.10.2"
black = "^24.3.0"
pylint = "^2.17.4"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

### black

[tool.black]
line-length = 100
skip-string-normalization = true


### pylint

[tool.pylint.main]
disable = [
    'duplicate-code',
    'fixme',
    'missing-class-docstring',
    'missing-function-docstring',
    'missing-module-docstring',
    'too-few-public-methods',
    'too-many-arguments',
]
extension-pkg-allow-list = [
    'shared',
]
jobs = 0  # use all cores
persistent = false
reports = false
score = false

[tool.pylint.basic]
good-names = [
    '_',
    'logger'
]

[tool.pylint.format]
expected-line-ending = 'LF'
max-line-length = 100

[tool.pylint.similarities]
ignore-imports = true

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
]
